Revised the notebook and Readme

--- a/EnergyMarketModel.ipynb
+++ b/EnergyMarketModel.ipynb
@@ -5,7 +5,7 @@
    "id": "4f25e270",
    "metadata": {},
    "source": [
-    "# ⚡ Energy Market Forecasting and Trading Decision Model\n",
+    "# Energy Market Forecasting and Trading Decision Model\n",
     "\n",
     "This notebook presents a **data-driven decision support system** for intraday energy trading, developed in accordance with the [TASK.pdf](./TASK.pdf).  \n",
     "The project focuses on predicting the **expected settlement price** in the Nordic balancing market and using this forecast to guide trading actions (BUY / SELL / HOLD).  \n",
@@ -13,7 +13,7 @@
     "\n",
     "---\n",
     "\n",
-    "## 🎯 Objective\n",
+    "## Objective\n",
     "\n",
     "The goal is to forecast the **expected settlement price** for the delivery hour (17:00–18:00), based on market information available at **16:53**.  \n",
     "From this expectation, we determine whether the trader should **buy**, **sell**, or **hold** a position.\n",
@@ -31,7 +31,7 @@
     "\n",
     "---\n",
     "\n",
-    "## ⚙️ Decision Logic\n",
+    "## Decision Logic\n",
     "\n",
     "Once the expected settlement price is estimated, the trading action is determined by comparing it to the **market bid/offer price** (≈ 30 €):\n",
     "\n",
@@ -48,7 +48,7 @@
     "\n",
     "---\n",
     "\n",
-    "## 💰 Expected Profit (Evaluation Phase)\n",
+    "## Expected Profit (Evaluation Phase)\n",
     "\n",
     "After the decision is made, we evaluate the **expected profit** from each strategy as:\n",
     "\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "cd78a0b6-49b6-43bb-abb5-7d87989f79bc",
    "metadata": {
     "tags": []
@@ -170,19 +170,15 @@
     "            'current_reg': available_data.iloc[-1]['regulation_mw'],\n",
     "            'reg_5min_ago': available_data.iloc[-5]['regulation_mw'] if len(available_data) > 5 else 0,\n",
     "            'reg_10min_ago': available_data.iloc[-10]['regulation_mw'] if len(available_data) > 10 else 0,\n",
-    "            'reg_15min_ago': available_data.iloc[-15]['regulation_mw'] if len(available_data) > 15 else 0,\n",
     "            \n",
     "            # Recent trends\n",
     "            'last_5min_mean': available_data.tail(5)['regulation_mw'].mean(),\n",
     "            'last_10min_mean': available_data.tail(10)['regulation_mw'].mean(),\n",
-    "            'last_15min_mean': available_data.tail(15)['regulation_mw'].mean(),\n",
     "            'last_30min_mean': available_data.tail(30)['regulation_mw'].mean(),\n",
     "            'last_60min_mean': available_data.tail(60)['regulation_mw'].mean(),\n",
     "            \n",
     "            \n",
     "            # Momentum\n",
-    "            'momentum_5min': available_data.tail(5)['regulation_mw'].mean() - \n",
-    "                             available_data.tail(10).head(5)['regulation_mw'].mean(),\n",
     "            'momentum_10min': available_data.tail(10)['regulation_mw'].mean() - \n",
     "                             available_data.tail(20).head(10)['regulation_mw'].mean(),\n",
     "            \n",
@@ -226,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "6f40fd28-12e1-48e3-a6a7-67de83feed63",
    "metadata": {
     "tags": []
@@ -240,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "bef1a5ba-7291-4dd5-b44e-222f0494f320",
    "metadata": {
     "tags": []
@@ -289,8 +285,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9219283a",
+   "metadata": {},
+   "source": [
+    "'accuracy': Overall proportion of correct predictions.\n",
+    "\n",
+    "precision: Of all predicted positives, how many were actually positive? (Good for avoiding false positives.)\n",
+    "\n",
+    "recall: Of all actual positives, how many did you correctly identify? (Good for avoiding false negatives.)\n",
+    "\n",
+    "f1: Harmonic mean of precision and recall — balances both.\n",
+    "\n",
+    "roc_auc: Measures how well the model separates classes across all thresholds. Higher is better.\n",
+    "\n",
+    "log_loss: Penalizes incorrect confident predictions — lower is better."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "628d1aec-36de-49f9-95c3-26125e31e729",
    "metadata": {
     "tags": []
@@ -302,20 +316,20 @@
      "text": [
       "\n",
       "Logistic Regression:\n",
-      "  Accuracy:   0.637\n",
-      "  Precision:  0.649\n",
+      "  Accuracy:   0.669\n",
+      "  Precision:  0.685\n",
       "  Recall:     0.735\n",
-      "  F1 Score:   0.690\n",
-      "  ROC AUC:    0.649\n",
-      "  Log Loss:   0.6481\n",
+      "  F1 Score:   0.709\n",
+      "  ROC AUC:    0.660\n",
+      "  Log Loss:   0.6380\n",
       "\n",
       "XGBoost Classifier:\n",
-      "  Accuracy:   0.532\n",
-      "  Precision:  0.581\n",
-      "  Recall:     0.529\n",
-      "  F1 Score:   0.554\n",
-      "  ROC AUC:    0.562\n",
-      "  Log Loss:   0.9862\n"
+      "  Accuracy:   0.565\n",
+      "  Precision:  0.617\n",
+      "  Recall:     0.544\n",
+      "  F1 Score:   0.578\n",
+      "  ROC AUC:    0.561\n",
+      "  Log Loss:   0.9913\n"
      ]
     }
    ],
@@ -340,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "5f349c7f-9825-448d-a94e-cdd77486bde0",
    "metadata": {
     "tags": []
@@ -433,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "7743f2ee",
    "metadata": {},
    "outputs": [
@@ -441,9 +455,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model probability: 0.58\n",
-      "Expected settlement: €52.50\n",
-      "Decision: BUY | Expected profit: €22.50/MWh\n"
+      "Model probability: 0.52\n",
+      "Expected settlement: €46.39\n",
+      "Decision: BUY | Expected profit: €16.39/MWh\n"
      ]
     }
    ],
@@ -486,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "1bf2ad52-c137-4ac5-9caf-0baa365d7719",
    "metadata": {
     "tags": []
@@ -496,27 +510,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "weekday                  0.027675\n",
-      "last_15min_mean          0.023209\n",
-      "is_monday                0.011697\n",
-      "reg_5min_ago             0.010052\n",
-      "last_60min_mean          0.008061\n",
-      "momentum_10min           0.007945\n",
-      "reg_10min_ago            0.006909\n",
-      "morning_avg              0.006124\n",
-      "is_friday                0.004601\n",
-      "last_10min_volatility    0.003203\n",
-      "last_60min_volatility    0.002864\n",
-      "recent_max               0.001897\n",
-      "last_5min_volatility     0.001774\n",
-      "last_30min_mean          0.001715\n",
-      "last_5min_mean           0.001663\n",
-      "last_10min_mean          0.001573\n",
-      "reg_15min_ago            0.001196\n",
-      "current_reg              0.000814\n",
-      "afternoon_avg            0.000385\n",
-      "recent_min               0.000317\n",
-      "momentum_5min            0.000179\n",
+      "weekday                  0.029867\n",
+      "last_10min_mean          0.028781\n",
+      "is_monday                0.012666\n",
+      "reg_5min_ago             0.011081\n",
+      "last_60min_mean          0.007881\n",
+      "morning_avg              0.006584\n",
+      "reg_10min_ago            0.006460\n",
+      "is_friday                0.005468\n",
+      "last_30min_mean          0.004865\n",
+      "last_5min_mean           0.004390\n",
+      "last_60min_volatility    0.003797\n",
+      "last_10min_volatility    0.003647\n",
+      "last_5min_volatility     0.002410\n",
+      "recent_max               0.002225\n",
+      "momentum_10min           0.000758\n",
+      "current_reg              0.000728\n",
+      "afternoon_avg            0.000440\n",
+      "recent_min               0.000178\n",
       "dtype: float64\n"
      ]
     }
