Revised the notebook

--- a/EnergyMarketModel.ipynb
+++ b/EnergyMarketModel.ipynb
@@ -289,17 +289,17 @@
    "id": "9219283a",
    "metadata": {},
    "source": [
-    "'accuracy': Overall proportion of correct predictions.\n",
+    "`accuracy`: Overall proportion of correct predictions.\n",
     "\n",
-    "precision: Of all predicted positives, how many were actually positive? (Good for avoiding false positives.)\n",
+    "`precision`: Of all predicted positives, how many were actually positive (Good for avoiding false positives.)\n",
     "\n",
-    "recall: Of all actual positives, how many did you correctly identify? (Good for avoiding false negatives.)\n",
+    "`recall`: Of all actual positives, how many did you correctly identify (Good for avoiding false negatives.)\n",
     "\n",
-    "f1: Harmonic mean of precision and recall — balances both.\n",
+    "`f1`: Harmonic mean of precision and recall — balances both.\n",
     "\n",
-    "roc_auc: Measures how well the model separates classes across all thresholds. Higher is better.\n",
+    "`roc_auc`: Measures how well the model separates classes across all thresholds. Higher is better.\n",
     "\n",
-    "log_loss: Penalizes incorrect confident predictions — lower is better."
+    "`log_loss`: Penalizes incorrect confident predictions — lower is better."
    ]
   },
   {
